# collector

./: .gitignore  Makefile  README.md  blob-collector.cabal  stack.yaml
app/: Collector.hs  Server.hs
res/docker/: Dockerfile.db
res/schemas/: product.yaml  source.yaml
src/: Handlers.hs
src/Core/: Concepts.hs  Functions.hs  Ports.hs
src/Models/: Persistent.hs  Types.hs
src/Persistent/: Database.hs  Instances.hs  Models.hs
src/Repository/: Database.hs  Models.hs  Ports.hs  Types.hs
src/Store/: Class.hs  Persist.hs  State.hs
src/Web/: API.hs  Handlers.hs  Server.hs  Swagger.hs
