name:                blob-collector
version:             0.1.0.0
synopsis:            Initial project template from stack
description:         Please see README.md
homepage:            https://github.com/githubuser/blob-collector#readme
license:             BSD3
license-file:        LICENSE
author:              Bart Frenk
maintainer:          bart.frenk@gmail.com
copyright:           2017 Bart Frenk
category:            Web
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  other-modules:       Persistent.Instances
                       Persistent.Models
  exposed-modules:     Persistent.Database
                       Core.Concepts
                       Core.Ports
                       Core.Functions
                       Web.API
                       Web.Server
                       Web.Swagger
  build-depends:       QuickCheck
                     , aeson
                     , aeson-pretty
                     , base >= 4.7 && < 5
                     , basic-prelude
                     , bytestring
                     , containers
                     , esqueleto
                     , hjsonschema
                     , lens
                     , mtl
                     , persistent
                     , persistent-sqlite
                     , persistent-template
                     , servant
                     , servant-server
                     , servant-swagger
                     , string-conv
                     , swagger2
                     , time
  default-language:    Haskell2010

executable server
  hs-source-dirs:      app
  main-is:             Server.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , basic-prelude
                     , blob-collector
                     , monad-control
                     , monad-logger
                     , mtl
                     , persistent
                     , persistent-postgresql
                     , servant-server
                     , wai
                     , wai-cors
                     , warp
 default-language:    Haskell2010

test-suite blob-collector-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , blob-collector
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/githubuser/blob-collector
